# VidaCV

./: .gitignore  README.md  app.py  main.py  pyproject.toml  rag.py  requirements.txt  test_rag.py
.github/workflows/: update_space.yml
knowledge/: contacto.txt  perfil_profesional.txt  personalidad_y_contacto.txt  proyecto_chat_cv.txt  proyectos.txt  stack_ia.txt
knowledge_base/: experiencia_laboral.txt  habilidades_tecnicas.txt  personalidad_y_contacto.txt
me/: sobre_mi.txt.txt
